# just-ai

./: .gitignore  README.md  README.中文.md
.codebase-memory/: adr.md
.github/workflows/: just-ai.yaml
agent/: README.md
agent/commands/: implement.md  refresh-index.md  review-architecture.md  verify.md
agent/prompts/: review.md  system.md
apps/just-ai-gui/: README.md  package-lock.json  package.json
apps/just-ai-gui/src/: App.tsx  api.ts  styles.css
apps/just-ai-gui/src-tauri/: Cargo.toml  tauri.conf.json
apps/just-ai-gui/src-tauri/src/: lib.rs
apps/just-ai-mcp/: Cargo.toml  README.md
apps/just-ai-mcp/src/: catalog.rs  lib.rs  main.rs  protocol.rs  tools.rs
apps/just-ai-mcp/tests/: stdio.rs
crates/just-ai/: Cargo.toml  README.md
crates/just-ai/src/: ai_responses.rs  bounded_file.rs  bounded_output.rs  cli.rs  inspection.rs  just_dump.rs  lib.rs  main.rs  prompts.rs  proposal.rs  provider.rs
crates/just-ai/src/application/: execution.rs  history.rs  mod.rs  patches.rs  project_context.rs
crates/just-ai/src/application/execution/: process_tree.rs
crates/just-ai/src/domain/: mod.rs  policy.rs  risk.rs
crates/just-ai/tests/: cli.rs
crates/just-ai/tests/fixtures/: README.md  just-dump-basic.json  just-dump-rich.json  just-dump-windows.json
docs/architecture/: README.md  roadmap.md
docs/architecture/adr/: 0001-companion-layers.md  0002-ai-is-proposal-only.md  0003-two-phase-execution.md  0004-native-provider-and-response-contracts.md  0005-cross-platform-process-tree-cancellation.md
