[package]
name = "just-ai"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "just-ai"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0.0", features = ["derive", "env"] }
dirs = "6.0.0"
jsonschema = { version = "0.48.0", default-features = false }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
similar = "3.0.0"
tempfile = "3.0.0"
ureq = { version = "3.2.0", features = ["json"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.0"
